# temporal-parseable-plugin

./: .env.example  .gitignore  README.md  pyproject.toml
demo/: client.py  worker.py  workflows.py
docker/: docker-compose.collector.yaml  docker-compose.yaml  otel-collector-config.yaml
src/temporal_parseable/: __init__.py  config.py  exporters.py  logging_handler.py  metrics_interceptor.py  otel_setup.py  plugin.py
tests/: conftest.py  test_config.py  test_demo_workflow.py  test_exporters.py  test_plugin.py
